# thermpkg

./: CMakeLists.txt  README.md  package.xml
launch/: all3.launch  cameras.launch
scripts/: bw_img_pub.py  codedemo.py  kiddocamp.py  np  tempView.py  temp_img_view.py  temp_subscriber.py
src/: ThermAppROS.cpp  thermapp.c  thermapp.h
src/scripts/: temp_subscriber.py
