<?xml version="1.0"?>
<package format="2">
  <name>thermpkg</name>
  <version>0.0.0</version>
  <description>A package for publishing thermal image data to ros. This package is a small modification to 
encrypetededdy's ThermAppCam (https://github.com/encryptededdy/ThermAppCam/tree/master/thermapp) </description>

  <maintainer email="kspons@tamu.edu">kspons</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>



  <export>
  </export>

</package>
